--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
     <img src="imgs/empty_heart.png" id="empty_heart">
     <img src="imgs/wart.png" id="wart">
     <img src="imgs/witch.png" id="witch">
+    <img src="imgs/inhalingCloud.png" id="inhalingCloud">
+    <img src="imgs/blowingCloud.png" id="blowingCloud">
+    <img src="imgs/wind.png" id="wind">
+    <img src="imgs/syringe.png" id="syringe">
     <script type="module" src="main.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </body>
